syntax = "proto3";

package devops.integral.upm.srv.service;

service RoleService {
    // 创建角色
    rpc CreateRole(CreateRoleReq) returns (RoleResp);
    // 更新角色
    rpc UpdateRole(UpdateRoleReq) returns (RoleResp);
    // 删除角色
    rpc DeleteRole(DeleteRoleReq) returns (DeleteRoleResp);
    // 根据角色名称查询角色
    rpc SelectRolesByName(SelectRoleReq) returns (SelectRolesResp);
    // 给角色授权
    rpc AccessRole(AccessRoleReq) returns (AccessRoleResp);
}

message CreateRoleReq {
    int32 roleType = 1;
    string roleName = 2;
    string roleDesc = 3;
    string createdBy = 4;
    int32 creatorUserId = 5;
}

message UpdateRoleReq {
    int32 roleId = 1;
    string roleName = 2;
    string roleDesc = 3;
    string updatedBy = 4;
}

message DeleteRoleReq {
    int32 roleId = 1;
    string updatedBy = 2;
}

message DeleteRoleResp {
    bool success = 1;
    string message = 2;
}

message SelectRoleReq {
    string roleName = 1;
    int32 userId = 2;
    bool admin = 3;
}

message AccessRoleReq {
    int32 roleId = 1;
    repeated int32 privilegeIds = 2;
    string createdBy = 3;
}

message AccessRoleResp {
    bool success = 1;
    string message = 2;
}

message Role {
    int32 roleId = 1;
    int32 parentRoleId = 2;
    int32 roleType = 3;
    string roleName = 4;
    string roleDesc = 5;
    int32 createdOn = 6;
    string createdBy = 7;
    int32 updatedOn = 8;
    string updatedBy = 9;
    int32 deletedOn = 10;
}

message RoleResp {
    bool success = 1;
    string message = 2;
    Role role = 3;
}

message SelectRolesResp {
    bool success = 1;
    string message = 2;
    repeated Role roles = 3;
}
